fix more z-index stuff

--- a/site/static/scss/admin/song_object.scss
+++ b/site/static/scss/admin/song_object.scss
@@ -42,6 +42,7 @@ $form-width: 500px;
             textarea {
                 width: $form-width;
                 height: 10em;
+                resize: none;
             }
         }
         &.themes {
@@ -105,7 +106,6 @@ $form-width: 500px;
         background: rgba(255,255,255,0.9);
         outline: 3px dashed $blue;
         outline-offset: -15px;
-        z-index: 5;
         h2 {
             display: inline-block;
         }
