--- a/site/static/scss/base.scss
+++ b/site/static/scss/base.scss
@@ -161,6 +161,7 @@ header {
     top: 0;
     background: rgba(50,50,50,0.4);
     text-align: center;
+    z-index: 5;
     &:before {
         content: "";
         display: inline-block;
